# arm-generic-timer

./: Cargo.toml  README.md
src/: embedded_hal.rs  lib.rs  memory_mapped.rs  sysreg.rs
