# SPDX-FileCopyrightText: Copyright The arm-generic-timer Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-generic-timer"
version = "0.2.1"
authors = [
    "Balint Dobszay <balint.dobszay@arm.com>",
    "Imre Kis <imre.kis@arm.com>",
]
description = "Arm Generic Timer driver"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-generic-timer.git"
keywords = ["arm", "timer", "counter", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
arm-sysregs = "0.2.6"
bitflags = "2.11.1"
embedded-hal = { version = "1.0.0", optional = true }
safe-mmio = "0.3.0"
zerocopy = "0.8"

[dev-dependencies]
arm-sysregs = { version = "0.2.6", features = ["fakes"] }

[features]
default = ["embedded-hal"]
el1 = ["arm-sysregs/el1"]
el2 = ["el1", "arm-sysregs/el2"]
fakes = ["arm-sysregs/fakes"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
features = ["el1", "el2", "embedded-hal"]
rustdoc-args = ["--cfg", "docsrs"]
